--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
  font-family:  BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  text-align: center;
  background-image: url("station.jpg");
- background-size: cover;
+ height: 100vh;
  background-repeat: no-repeat;
  color: white;
  font-size: 2em;
